[package]
name = "htop-like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["macros", "ws"] }
tokio = { version = "1.26.0", features = ["full"] }
sysinfo = "0.28.2"
serde_json = "1.0.94"
serde =  { version = "1.0", features = ["derive"] }
byte-unit = "4.0.18"
